bin_PROGRAMS = my-bittorrent
my_bittorrent = src/dictionary.c \
								src/dictionary.h \
								src/my_bittorrent.c \
								src/my_string.c \
								src/my_string.h \
								src/tracker_helper.c \
								src/parsing.c \
								src/my_bittorrent.h \
								src/list/list.h \
								src/list/list.c \
								src/list/op_list.c



