bin_PROGRAMS = my-bittorrent
my_bittorrent_SOURCES = src/dictionary.c \
												src/dictionary.h \
												src/my_bittorrent.c \
												src/my_string.c \
												src/my_string.h \
												src/tracker_helper.c \
												src/parsing.c \
												src/parsing.h \
												src/my_bittorrent.h \
												src/list/list.h \
												src/list/list.c \
												src/list/op_list.c \
												src/list/op_list2.c \
												src/print_json.c \
												src/print_json.h \
												src/get_tracker.c \
												src/encode.c \
												src/encode.h \
												src/dump_peers.c \
												src/sock_list.c \
												src/print_log.c \
												src/print_log.h \
												src/my_string.h \
												src/connect_peers.c \
												src/connect_peers.h
