bin_PROGRAMS = my-bittorrent

my_bittorrent_CFLAGS = -Wall -Werror -std=c99 -pedantic
my_bittorrent_SOURCES = dictionary.c \
												dictionary.h \
												my_bittorrent.c \
												my_string.c \
												my_string.h \
												tracker_helper.c \
												parsing.c \
												parsing.h \
												my_bittorrent.h \
												list/list.h \
												list/list.c \
												list/op_list.c \
												print_json.c \
												print_json.h \
												get_tracker.c
